crates/tests/fixtures/harness/data/error/unsupported_type/input.rdl

#[win32]
mod Test {
    struct Foo {
        a: (i32, i32),
    }
}
        